# fornani

./: .clang-format  .clang-tidy  .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/editor/: CMakeLists.txt
editor/src/: CMakeLists.txt  main.cpp
editor/src/automa/: CMakeLists.txt  DialogueEditor.cpp  Editor.cpp  EditorState.cpp  Metagrid.cpp  PopupHandler.cpp
editor/src/canvas/: Background.cpp  CMakeLists.txt  Canvas.cpp  Clipboard.cpp  Entity.cpp  EntitySet.cpp  Grid.cpp  Layer.cpp  Map.cpp  Tile.cpp
editor/src/dialogue/: CMakeLists.txt  DialogueSuite.cpp  Node.cpp
editor/src/gui/: CMakeLists.txt  Console.cpp
editor/src/metagrid/: CMakeLists.txt  Room.cpp  Workspace.cpp
editor/src/setup/: CMakeLists.txt  EditorApplication.cpp  WindowManager.cpp
editor/src/tool/: Brush.cpp  CMakeLists.txt  EntityEditor.cpp  Erase.cpp  Eyedropper.cpp  Fill.cpp  Hand.cpp  Marquee.cpp  Tool.cpp
editor/src/util/: CMakeLists.txt  Camera.cpp
game/: CMakeLists.txt
game/include/fornani/: CMakeLists.txt
game/src/: CMakeLists.txt
game/src/app/: CMakeLists.txt  app.aps  app.rc  app_icon_data.hpp
game/src/audio/: Ambience.cpp  CMakeLists.txt  MusicPlayer.cpp  Sound.cpp  SoundEffects.cpp  Soundboard.cpp
game/src/automa/: CMakeLists.txt  GameState.cpp  GameplayState.cpp  MenuController.cpp  MenuState.cpp  Option.cpp  StateController.cpp  StateManager.cpp
game/src/components/: CMakeLists.txt  CircleSensor.cpp  PhysicsComponent.cpp  SteeringBehavior.cpp
game/src/core/: Application.cpp  AssetManager.cpp  CMakeLists.txt  CrashHandler.cpp  Game.cpp  SoundManager.cpp
game/src/entities/: CMakeLists.txt  Entity.cpp  Mobile.cpp
game/src/entity/: Animator.cpp  Bed.cpp  CMakeLists.txt  Chest.cpp  CutsceneTrigger.cpp  Destructible.cpp  Enemy.cpp  Entity.cpp  EntitySet.cpp  Inspectable.cpp  Light.cpp  NPC.cpp  Platform.cpp  Portal.cpp  SavePoint.cpp  SwitchBlock.cpp  SwitchButton.cpp  TimerBlock.cpp  Turret.cpp  (+2 more)
launcher/: CMakeLists.txt
launcher/src/: CMakeLists.txt  LauncherApplication.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
src/audio/: Ambience.cpp  Ambience.hpp  MusicPlayer.cpp  MusicPlayer.hpp  Sound.cpp  Sound.hpp  SoundEffect.cpp  SoundEffect.hpp  SoundEffects.cpp  SoundEffects.hpp  Soundboard.cpp  Soundboard.hpp
src/automa/: CMakeLists.txt  GameState.cpp  GameState.hpp  MenuController.cpp  MenuController.hpp  Option.cpp  Option.hpp  StateController.cpp  StateController.hpp  StateManager.cpp  StateManager.hpp
src/components/: Animation.cpp  Animation.hpp  AnimationController.cpp  AnimationController.hpp  BehaviorComponent.hpp  CircleSensor.cpp  CircleSensor.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  SteeringBehavior.cpp
src/entities/: Entity.cpp  Entity.hpp
src/graphics/: Background.cpp  Background.hpp  ColorFade.cpp  ColorFade.hpp  Droplet.cpp  Droplet.hpp  FLColor.hpp  HelpText.cpp  HelpText.hpp  MapTexture.cpp  MapTexture.hpp  Rain.cpp  Rain.hpp  Scenery.cpp  Scenery.hpp  SpriteHistory.cpp  SpriteHistory.hpp  SpriteRotator.cpp  Style.hpp  TextWriter.cpp  TextWriter.hpp  TextureUpdater.cpp  TextureUpdater.hpp  Transition.cpp  Transition.hpp  Tutorial.cpp  Tutorial.hpp
src/gui/: ActionContextBar.cpp  ActionContextBar.hpp  ActionControlIcon.cpp  ActionControlIcon.hpp  ActionControlIconQuery.cpp  ActionControlIconQuery.hpp  Console.cpp  Console.hpp  DialogueHandler.cpp  DialogueHandler.hpp  HUD.cpp  HUD.hpp  InventoryWindow.cpp  InventoryWindow.hpp  ItemWidget.cpp  ItemWidget.hpp  MiniMap.cpp  MiniMap.hpp  MiniMenu.cpp  MiniMenu.hpp  OptionList.cpp  OptionList.hpp  PauseWindow.cpp  PauseWindow.hpp  Portrait.cpp  Portrait.hpp  Selector.cpp  Selector.hpp  StatusBar.cpp  StatusBar.hpp  Subconsole.cpp  Subconsole.hpp  VendorDialog.cpp  VendorDialog.hpp  WardrobeWidget.cpp  WardrobeWidget.hpp  Widget.cpp  Widget.hpp  WidgetBar.cpp
src/level/: BlockDestroyer.cpp  BlockDestroyer.hpp  Breakable.cpp  Breakable.hpp  Camera.cpp  Camera.hpp  Checkpoint.cpp  Destroyable.cpp  Destroyable.hpp  Grid.cpp  Grid.hpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  Platform.cpp  Platform.hpp  Pushable.cpp  Pushable.hpp  Spawner.cpp  Spawner.hpp  Spike.cpp  Spike.hpp  SwitchBlock.cpp  SwitchBlock.hpp  SwitchButton.cpp  SwitchButton.hpp  Tile.cpp  Tile.hpp
src/particle/: Attractor.cpp  Attractor.hpp  Chain.cpp  Chain.hpp  Effect.cpp  Effect.hpp  Emitter.cpp  Emitter.hpp  Explosion.cpp  Explosion.hpp  Gravitator.cpp  Gravitator.hpp  ObjectPool.hpp  Particle.cpp  Particle.hpp  Spark.cpp  Spark.hpp  Sparkler.cpp  Sparkler.hpp  Spring.cpp  Spring.hpp
src/service/: Service.hpp  ServiceProvider.hpp
src/setup/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  ControllerMap.cpp  ControllerMap.hpp  DataManager.cpp  DataManager.hpp  EnumLookups.hpp  File.hpp  Game.cpp  Game.hpp  LookupTables.hpp  MapLookups.hpp  ResourceFinder.hpp  ServiceLocator.hpp  Tables.hpp  TextManager.cpp  TextManager.hpp  Version.hpp  WindowManager.cpp  WindowManager.hpp
src/story/: Cutscene.cpp  Cutscene.hpp  CutsceneCatalog.cpp  CutsceneCatalog.hpp  QuestTracker.cpp  QuestTracker.hpp  StatTracker.hpp
src/utils/: AdjacencyList.hpp  BitFlags.hpp  Camera.hpp  CircleCollider.cpp  CircleCollider.hpp  Circuit.hpp  Clock.hpp  Collider.cpp  Collider.hpp  CollisionDepth.cpp  CollisionDepth.hpp  Constants.hpp  Cooldown.hpp  Counter.hpp  Cycle.hpp  Decoder.cpp  Direction.hpp  Fader.cpp  Fader.hpp  Grid.cpp  Grid.hpp  InputState.hpp  Logger.cpp  Logger.hpp  Math.hpp  NineSlice.cpp  NineSlice.hpp  QuestCode.hpp  Random.hpp  RichText.hpp  Shape.cpp  Shape.hpp  StateFunction.hpp  StateMachine.cpp  StateMachine.hpp  Stopwatch.hpp  Ticker.cpp  Ticker.hpp  WorldClock.cpp  WorldClock.hpp
src/weapon/: Ammo.cpp  Ammo.hpp  Arsenal.cpp  Arsenal.hpp  GrapplingHook.cpp  GrapplingHook.hpp  Grenade.cpp  Grenade.hpp  Hotbar.cpp  Hotbar.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp
(+2216 files in other folders)
