add_subdirectory(app)
add_subdirectory(audio)
add_subdirectory(automa)
add_subdirectory(components)
add_subdirectory(core)
add_subdirectory(entities)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(io)
add_subdirectory(world)
add_subdirectory(particle)
add_subdirectory(setup)
add_subdirectory(shader)
add_subdirectory(story)
add_subdirectory(systems)
add_subdirectory(utils)
add_subdirectory(weapon)
