nani_add_sources(
        ActionContextBar.cpp
        ActionControlIconQuery.cpp
        Console.cpp
        Dashboard.cpp
        Gizmo.cpp
        HUD.cpp
        InventoryWindow.cpp
        ItemWidget.cpp
        MiniMap.cpp
        MiniMenu.cpp
        PauseWindow.cpp
        Portrait.cpp
        InventorySelector.cpp
        StatusBar.cpp
        ResponseDialog.cpp
        TextWriter.cpp
        VendorDialog.cpp
        WardrobeWidget.cpp
        Widget.cpp
        WidgetBar.cpp
)
add_subdirectory(gizmos)
