nani_add_sources(
        ActionContextBar.cpp
        ActionControlIconQuery.cpp
        BossHealth.cpp
        Dashboard.cpp
        Gizmo.cpp
        HUD.cpp
        InventoryWindow.cpp
        ItemWidget.cpp
        MiniMap.cpp
        MiniMenu.cpp
        OrbDisplay.cpp
        PauseWindow.cpp
        Portrait.cpp
        InventorySelector.cpp
        StatusBar.cpp
        VendorDialog.cpp
        WardrobeWidget.cpp
        Widget.cpp
        WidgetBar.cpp
)
add_subdirectory(gizmos)
add_subdirectory(console)
