nani_add_sources(
        ActionContextBar.cpp
        ActionControlIconQuery.cpp
        BossHealth.cpp
        Dashboard.cpp
        DottedLine.cpp
        Gizmo.cpp
        HealthBar.cpp
        InventoryWindow.cpp
        ItemWidget.cpp
        MiniMap.cpp
        MiniMenu.cpp
        NumberDisplay.cpp
        OrbDisplay.cpp
        PauseWindow.cpp
        Portrait.cpp
        InventorySelector.cpp
        StatusBar.cpp
        VendorDialog.cpp
        WardrobeWidget.cpp
        Widget.cpp
        WidgetBar.cpp
)
add_subdirectory(gizmos)
add_subdirectory(console)
add_subdirectory(hud)
